--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 helloworld.exe
 build
-.vscode/*.log
+.vscode/*      
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
